--- a/index.html
+++ b/index.html
@@ -20,6 +20,18 @@
             </div>
         </div>
     </div>
+    <div class="send">
+        <div class="date">06-07-2025</div>
+        <div class="ref">Payment to ABCD Company</div>
+        <div class="amt credit">+$1000.00</div>
+        <div class="type">Credit</div>
+    </div>
+    
+    <div class="transaction">
+        <div class="date">2024-07-05</div>
+        <div class="ref">ATM Withdrawal</div>
+        <div class="amt debit">-$100.00</div>
+        <div class="type">Debit</div></div>
     <script src="script.js"></script>
 </body>
 
