--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
+
+what is the validation part ie js file to be done for the above code
+
+
+
 <body>
     <div id="container">
         <div id="banking">
@@ -26,12 +31,13 @@
         <div class="amt credit">+$1000.00</div>
         <div class="type">Credit</div>
     </div>
-    
+
     <div class="transaction">
         <div class="date">2024-07-05</div>
         <div class="ref">ATM Withdrawal</div>
         <div class="amt debit">-$100.00</div>
-        <div class="type">Debit</div></div>
+        <div class="type">Debit</div>
+    </div>
     <script src="script.js"></script>
 </body>
 
